<resources>
    <string name="app_name">MovieGuess</string>
    <string name="begin_game">Let\'s Play!</string>
    <string name="instruction_welcome">In this game, you will have to guess which Disney movie is the picture from</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="settings_welcome">Settings</string>
    <string name="settings_title">Choose your settings</string>
    <string name="theme_color">Theme Color</string>
    <string name="game_character">Game Character</string>
    <string name="config">Configuration</string>
    <string name="difficult_level">Choose difficulty level</string>
    <string name="game_over">Game Over!</string>
    <string name="your_results">Your Results</string>
    <string name="correct_answers">Correct Answers</string>
    <string name="wrong_answer">Wrong Answers</string>
    <string name="play_again">Play Again!</string>
    <string name="start_game">Start Game</string>
    <string name="back_to_welcome">Save Settings</string>
    <string name="next_question">Next</string>
    <string name="correct_answer">Correct!</string>
    <string name="incorrect_answer">Incorrect</string>
    <string name="show_results">Results</string>
    <string name="olaf_result">Olaf\'s Results</string>
    <string name="maleficent_result">Maleficent\'s Results</string>
    <string name="cinderella_result">Cinderella\'s Results</string>
</resources>